--- a/Twinsanity/Twinsanity.csproj
+++ b/Twinsanity/Twinsanity.csproj
@@ -64,6 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultEnums.cs" />
+    <Compile Include="Items\Code\Animation.cs" />
+    <Compile Include="Items\Code\CodeModel.cs" />
+    <Compile Include="Items\Code\GameObjectDemo.cs" />
     <Compile Include="Items\Code\GraphicsInfo.cs" />
     <Compile Include="Items\DynamicSceneryData.cs" />
     <Compile Include="Items\Graphics\ArmatureModel.cs" />
@@ -75,7 +78,9 @@
     <Compile Include="Items\Instances\AIPath.cs" />
     <Compile Include="Items\Instances\AIPosition.cs" />
     <Compile Include="Items\Instances\CollisionSurface.cs" />
+    <Compile Include="Items\Instances\InstanceDemo.cs" />
     <Compile Include="Items\Instances\InstanceTemplate.cs" />
+    <Compile Include="Items\Instances\InstanceTemplateDemo.cs" />
     <Compile Include="Items\ParticleData.cs" />
     <Compile Include="Items\SceneryData.cs" />
     <Compile Include="RIFF.cs" />
