--- a/Twinsanity/Twinsanity.csproj
+++ b/Twinsanity/Twinsanity.csproj
@@ -25,6 +25,8 @@
     <Prefer32Bit>false</Prefer32Bit>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DefineConstants>DEBUG</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -64,17 +66,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultEnums.cs" />
+    <Compile Include="EzSwizzle.cs" />
+    <Compile Include="GSVector4i.cs" />
     <Compile Include="Items\Code\Animation.cs" />
     <Compile Include="Items\Code\CodeModel.cs" />
     <Compile Include="Items\Code\GameObjectDemo.cs" />
     <Compile Include="Items\Code\GraphicsInfo.cs" />
     <Compile Include="Items\DynamicSceneryData.cs" />
+    <Compile Include="Items\Graphics\ActorModel.cs" />
+    <Compile Include="Items\Graphics\ActorModelX.cs" />
     <Compile Include="Items\Graphics\ArmatureModel.cs" />
     <Compile Include="Items\Graphics\ArmatureModelX.cs" />
     <Compile Include="Items\Graphics\MaterialDemo.cs" />
     <Compile Include="Items\Graphics\MeshX.cs" />
     <Compile Include="Items\Graphics\Skydome.cs" />
     <Compile Include="Items\Graphics\SpecialModel.cs" />
+    <Compile Include="Items\Graphics\TextureX.cs" />
     <Compile Include="Items\Instances\AIPath.cs" />
     <Compile Include="Items\Instances\AIPosition.cs" />
     <Compile Include="Items\Instances\CollisionSurface.cs" />
@@ -109,6 +116,7 @@
     <Compile Include="TwinsSection.cs" />
     <Compile Include="TwinsFile.cs" />
     <Compile Include="BitConv.cs" />
+    <Compile Include="TwinsShader.cs" />
     <Compile Include="Types.cs" />
     <Compile Include="Items\Code\GameObject.cs" />
     <Compile Include="Items\Graphics\Model.cs" />
