Show trigger recievers, Fix dynamic scenery and script editor

--- a/TwinsaityEditor/TwinsanityEditor.csproj
+++ b/TwinsaityEditor/TwinsanityEditor.csproj
@@ -302,6 +302,7 @@
     <Compile Include="Viewers\RMViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Viewers\TextureBuffer.cs" />
     <Compile Include="Viewers\TextureViewer.cs">
       <SubType>Form</SubType>
     </Compile>
